--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -139,6 +139,7 @@
   }
 
   .project_screen_picture {
+    padding-top: 15px;
     width: 300px;
   }
 }
